cmake_minimum_required(VERSION 3.10)
project(C__LeetCode)

set(CMAKE_CXX_STANDARD 11)

add_executable(C__LeetCode main.cpp Problems/Problem226.h Problems/Problem234.h DataStructures/TreeNode.h DataStructures/ListNode.h Problems/Problem221.h Problems/Problem236.h Problems/Problem238.h Problems/Problem283.h Problems/Problem287.h Problems/Problem300.h Problems/Problem218.h Problems/Problem240.h Problems/Problem279.h Problems/Problem309.h Problems/Problem312.h Problems/Problem315.h)