cmake_minimum_required(VERSION 3.10)
project(C__LeetCode)

set(CMAKE_CXX_STANDARD 11)

add_executable(C__LeetCode main.cpp Problems/Problem226.h Problems/Problem234.h DataStructures/TreeNode.h DataStructures/ListNode.h Problems/Problem221.h Problems/Problem236.h Problems/Problem238.h Problems/Problem283.h Problems/Problem287.h Problems/Problem300.h Problems/Problem218.h Problems/Problem240.h Problems/Problem279.h Problems/Problem309.h Problems/Problem312.h Problems/Problem315.h Problems/Problem322.h Problems/Problem337.h Problems/Problem338.h Problems/Problem394.h Problems/Problem406.h Problems/Problem416.h Problems/Problem437.h Problems/Problem438.h Problems/Problem448.h Problems/Problem461.h Problems/Problem494.h Problems/Problem538.h)